# python-debug-tutorial

./: Projects.md  README.md
lm_profiler/: README.md  line_main.py.lprof  profile_output.lprof  profile_output.txt  profile_output_2024-05-14T171516.txt  pyproject.toml
lm_profiler/src/lm_profiler/: __init__.py  line_main.py
logging/: README.md  pyproject.toml
logging/src/logging/: __init__.py  main.py
pdb/: README.md  pyproject.toml
pdb/src/pdb/: main.py
profiler/: README.md  pyproject.toml
profiler/src/profiler/: __init__.py  analyze.py  hello.py  main.py  web.py
rdb/: README.md  pyproject.toml
rdb/src/rdb/: __init__.py  main.py
