[project]
name = "pdb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "okmtdev", email = "okmtdev@gmail.com" }
]
dependencies = [
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
select = ["ALL"]
ignore = ["T100", "T201", "D100"]
fixable = ["ALL"]

[tool.hatch.metadata]
allow-direct-references = true
