[project]
name = "profiler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "okmtdev", email = "okmtdev@gmail.com" }
]
dependencies = [
    "objgraph>=3.6.1",
    "py-spy>=0.3.14",
    "Flask>=3.0.3",
    "graphviz>=0.20.3",
    "gprof2dot>=2022.7.29",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.ruff]
select = ["ALL"]
ignore = ["T100", "T201", "D100"]
fixable = ["ALL"]

[tool.hatch.metadata]
allow-direct-references = true
